ipython (0.12-2) UNRELEASED; urgency=low

  * ipython-notebook: depend on libjs-mathjax instead of recommending.
    mathjax can't be securely served from cloudfront.
  * debian/rules: run python3 setup.py clean
  * remove transitional ipython-parallel package

 -- Julian Taylor <jtaylor.debian@googlemail.com>  Fri, 16 Mar 2012 22:27:48 +0100

ipython (0.12-1) unstable; urgency=low

  [ Julian Taylor ]
  * New upstream release
    - fix qtconsole crash with nonsensical -c input (Closes: #642326)
  * new package: ipython-notebook
  * new python3 packages: ipython3, ipython3-qtconsole (Closes: #650725)
  * refreshed patches
  * parallel example folder renamed newparallel -> parallel
  * drop upstream applied fix-version-checks-for-pyzmq-2.1.10.patch
  * add patch for notebook to use libjs-mathjax and recommend it
  * merge -parallel package back into ipython, add transitional package
  * added python-tk build dependency for a test
  * debian/copyright: update for the new notebook sources
  * debian/rules:
    - do not install test sources
    - fail on testsuite error
    - install ipython svg to icons folder and patch desktop to use it
  * debian/control: remove gtk suggests
  * remove obsolete README.source for quilt

  [ Piotr Ożarowski ]
  * ipython-qtconsole: add python-pyside.qt{core,gui,svn} as an alternative
    dependency to python-qt4

 -- Julian Taylor <jtaylor.debian@googlemail.com>  Thu, 29 Dec 2011 23:07:22 +0100

ipython (0.11-2) unstable; urgency=low

  * upload to unstable
  * add patch fix-version-checks-for-pyzmq-2.1.10.patch
  * fix debianize-error-messages.patch to reraise unknown exceptions
  * suggest python-zmq for ipython package
  * use dh_sphinxdoc
    - bump sphinx dependency to >= 1.0.7+dfsg-1~, replace libjs-jquery
      dependency with ${sphinxdoc:Depends} and drop ipython-doc.links
  * remove empty directory from ipython
  * link duplicate images in ipython-doc
  * remove obsolete Conflicts and Replaces
